src/test/ui/parser/issues/issue-60075.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-60075.rs:6:10
   |
LL |     fn qux() -> Option<usize> {
   |                               - unmatched opening delimiter begins here
LL |         let _ = if true {
LL |         });
   |          ^ mismatched closing delimiter

error: aborting due to previous error

